<resources>    <string name="app_name">SMP YASMI</string>    <string name="foto_informasi">Foto</string>    <string name="title">Judul</string>    <string name="date">Tanggal</string>    <string name="content">Konten</string>    <string name="profil_sekolah">Profil Sekolah</string>    <string name="mading">Mading</string>    <string name="sejarah_singkat">Sejarah Singkat</string>    <string name="visi_misi">Visi Misi</string>    <string name="fasilitas">Fasilitas</string>    <string name="sambutan">Sambutan</string>    <string name="title_activity_profil">Profil Sekolah</string>    <string name="profil_text">        "SMP YASMI.\n\n"        "SMP YASMI meruapakan sebuah sekolah swasta yang berdiri pada tahun 2004,"        "beralamat di Jl. Raya Cikupa - Pasarkemis, desa Sukaharja, kecamatan Sindang Jaya,  "        "kabupaten Tangerang, provinsi Banten. \n\n"        "SMP YASMI adalah sekolah yang didirikan dengan yayasan perguruan Mitra Yasmi, sejauh ini SMP YASMI telah menciptakan "        "lulusan – lulusan yang kompeten terutama dibidang komputer krena sekolah mengedepankan ilmu  "        "pengetahuan dibidang komputer. \n\n"        "Sesuai denga visi sekolah yang menginginkan  "        "siswa – siswanya mejadi anak bangsa yang mampu mengimbangi perkembangan teknologi \n"        "yang selalu berubah. "    </string>    <string name="action_settings">Settings</string>    <string name="visi_misi_sekolah">Visi &amp; Misi Sekolah</string>    <string name="visi">Visi</string>    <string name="isi_visi">        Menciptakan seklolah menjadi pilihan mayarakat yang lulusannya memiliki        kompetensi serta unggul dalam Iman dan Taqwa (IMTAQ) dan ilmu        pengetahuan dan Teknologi (IPTEK)</string>    <string name="misi">Misi</string>    <string name="isi_misi">        " 1. Mengembangkan sikap dan prilaku religiusitas \n "        "   dilingkungan dalam dan luar sekolah\n"        "2. Mengembangkan budaya gemar membaca, rasa ingin \n"        "    tahu, bertoleransi, bekerjasama, saling menghargai, \n"        "    disiplin, jujur, kerja keras, kreatif dan mandiri \n"        "3. Menciptakan lingkungan sekolah yang aman, rapi bersih \n"        "    dan nyaman \n"        "4. Menciptakan suasana pembelajaran yang menantang, \n"        "    menyenangkan, tanpa takut salah dan demokratis \n"        "5. Mengupayakan pemanfaatan waktu belajar, sumberdaya \n"        "    fisik dan manusia agar memberikan hasil yang terbaik \n"        "    bagi perkembangan peserta didik \n"    </string>    <string name="title_activity_sejarah">Sejarah Sekolah</string>    <string name="title_sejarah">Latar Belakang SMP YASMI</string>    <string name="sejarah">        Pertumbuhan penduduk di indonesia yang tergolong cepat membuat banyaknya        angka kelahiran anak setiap tahunnya, sehingga kebutuhan akan fasilitas        terus bertambah begitu pula dengan fasilitaas pendidikan. \n \n        Untuk membantu pemerintah dalam pembangunan dan perkembangan pendidikan,        maka pada tahun 2004 Yasan Mitra Yasmi ikut berpartisipasi dalam        pembangunan sekolah swasta dengan tujuan menempa anak bangsa indonesia        menjadi pribadi yang memiliki akhlak yang baik, mempunyai        kompetensi ilmu terutama dibidang pengetahuan dan teknologi serta        mengembangkan budaya gemar membaca, rasa ingin tahu, bertoleransi,        bekerjasama, saling menghargai, disiplin, jujur, kerja keras, kreatif dan        mandiri. \n \n        Oleh karen itu maka didirikalah SMP YASMI.    </string>    <string name="title_activity_sambutan">Sambutan - sambutan</string>    <string name="kepala_sekolah">Drs. H. Ade Sutaryo</string>    <string name="sambutan_kepala_sekolah">Tugas sekolah adalah menjadikan Anak bangsa yang kompeten, bermartabat dan berprilaku        sosial yang berakhlak. Dengan pendidikan yang baik akan menjadikan Putra/i ibu pertiwi        yang beradab dan ilmu serta mempunyai nilai sosial yang tinggi. - Kepala Sekolah</string>    <string name="ketua_komite">Daryanto, S.T </string>    <string name="sambutan_ketua_komite">        Sekolah bukan hanya tempat menuntut ilmu untuk para siswa. Namun juga merupakan keluarga besar        yang perlu dibagun dan ditempa anak - anaknya menjadi generasi emas. - Ketua Komite</string>    <string name="ketua_tu">Nita H Laenovita, S.H</string>    <string name="sambutan_ketua_tu">        Jadilah anak yang tangkas dan penuh perjuangan,        Kita beruntung karena hanya berjuang dengan pena. Sedangkan pejuang di masalalu berjuang dengan        menumpahkan darah dan air mata. \n - Ketua TU</string>    <string name="kurikulum">Reynaldi. S, S.Kom</string>    <string name="sambutan_kurikulum">        Jangan pernah takut akan kegagalan, karena sesungguhnya kegagalan itulah yang akan mengajarkanmu        cara untuk berhasil. Teruslah mencoba selama nafas masih berhembus dan jantung masih berdetak. - Kurikulum    </string>    <string name="kesiswaan">Ade Saputra, S.Des</string>    <string name="sambutan_kesiswaan">        Setiap orang itu pintar dibidangnya masing - masing.        Namun kadang orang - orang merasa sudah pintar dibidang mereka, sedangkan ilmu itu luas        itulah yang membuat orang terlihat bodoh. \n - Kesiswaan    </string>    <string name="humas">Bayu Ali. A, S.Pd</string>    <string name="sambutan_humas">        Masalah itu adalah pelajaran yang sulit. Tapi dibalik semua itu ada makna yang tersembunyi        dan penyelesaian yang indah. Karena tidak akan ada pelangi tanpa diawali awan mendung. - Humas    </string>    <string name="sarana_prasarana">Mega Tawwakal N, S,Km</string>    <string name="sambutan_sarana_prasarana">        Jalan yang lurus tak selalu mulus. Ketika orang yang kamu cintai tak mencintaimu, ikhlaskanlah.        Karena jodohmu pasti jauh lebih baik dan lebih pantas dari orang yang kamu cintai itu. - Sarana Prasarana        </string></resources>