<?xml version="1.0" encoding="utf-8"?><android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    app:layout_behavior="@string/appbar_scrolling_view_behavior"    tools:context="com.learn.madingapp.SambutanActivity"    tools:showIn="@layout/activity_sambutan">    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="wrap_content">        <de.hdodenhof.circleimageview.CircleImageView            android:id="@+id/img_kepala_sekolah"            android:layout_width="100dp"            android:layout_height="100dp"            android:layout_marginTop="@dimen/activity_vertical_margin"            android:layout_marginLeft="@dimen/activity_horizontal_margin"            android:layout_marginRight="@dimen/activity_horizontal_margin"            android:src="@drawable/kepala_sekolah"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_margin="@dimen/text_margin"            android:layout_below="@+id/img_kepala_sekolah"            android:textStyle="bold"            android:text="@string/kepala_sekolah" />        <TextView            android:id="@+id/txt_kepala_sekolah"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textStyle="italic"            android:layout_margin="@dimen/text_margin"            android:layout_toRightOf="@+id/img_kepala_sekolah"            android:text="@string/sambutan_kepala_sekolah" />        <de.hdodenhof.circleimageview.CircleImageView            android:id="@+id/img_ketua_komite"            android:layout_width="100dp"            android:layout_height="100dp"            android:layout_below="@+id/txt_kepala_sekolah"            android:layout_marginLeft="@dimen/activity_horizontal_margin"            android:layout_marginTop="30dp"            android:layout_marginRight="@dimen/activity_horizontal_margin"            android:src="@drawable/daryanto" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/img_ketua_komite"            android:layout_alignEnd="@+id/img_ketua_komite"            android:layout_marginStart="@dimen/text_margin"            android:layout_marginTop="@dimen/activity_horizontal_margin"            android:layout_marginEnd="10dp"            android:layout_marginBottom="@dimen/text_margin"            android:text="@string/ketua_komite"            android:textStyle="bold" />        <TextView            android:id="@+id/txt_ketua_komite"            android:layout_width="264dp"            android:layout_height="109dp"            android:layout_below="@+id/txt_kepala_sekolah"            android:layout_alignParentEnd="true"            android:layout_marginStart="12dp"            android:layout_marginTop="30dp"            android:layout_marginEnd="8dp"            android:layout_toEndOf="@+id/img_ketua_komite"            android:text="@string/sambutan_ketua_komite"            android:textStyle="italic" />        <de.hdodenhof.circleimageview.CircleImageView            android:id="@+id/img_ketua_tu"            android:layout_width="100dp"            android:layout_height="100dp"            android:layout_below="@+id/txt_ketua_komite"            android:layout_marginLeft="@dimen/activity_horizontal_margin"            android:layout_marginTop="53dp"            android:layout_marginRight="@dimen/activity_horizontal_margin"            android:src="@drawable/nita" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/img_ketua_tu"            android:layout_marginStart="@dimen/text_margin"            android:layout_marginTop="@dimen/activity_horizontal_margin"            android:layout_marginEnd="10dp"            android:layout_marginBottom="@dimen/text_margin"            android:text="@string/ketua_tu"            android:textStyle="bold" />        <TextView            android:id="@+id/txt_ketua_tu"            android:layout_width="282dp"            android:layout_height="107dp"            android:layout_below="@+id/txt_ketua_komite"            android:layout_alignParentEnd="true"            android:layout_marginStart="12dp"            android:layout_marginTop="56dp"            android:layout_marginEnd="16dp"            android:layout_toEndOf="@+id/img_ketua_tu"            android:text="@string/sambutan_ketua_tu"            android:textStyle="italic" />        <de.hdodenhof.circleimageview.CircleImageView            android:id="@+id/img_kurikulum"            android:layout_width="100dp"            android:layout_height="100dp"            android:layout_below="@+id/txt_ketua_tu"            android:layout_marginLeft="@dimen/activity_horizontal_margin"            android:layout_marginTop="60dp"            android:layout_marginRight="@dimen/activity_horizontal_margin"            android:src="@drawable/reynaldi" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/img_kurikulum"            android:layout_marginStart="@dimen/text_margin"            android:layout_marginTop="@dimen/activity_horizontal_margin"            android:layout_marginEnd="10dp"            android:layout_marginBottom="@dimen/text_margin"            android:text="@string/kurikulum"            android:textStyle="bold" />        <TextView            android:id="@+id/txt_kurikulum"            android:layout_width="282dp"            android:layout_height="107dp"            android:layout_below="@+id/txt_ketua_tu"            android:layout_alignParentEnd="true"            android:layout_marginStart="12dp"            android:layout_marginTop="56dp"            android:layout_marginEnd="16dp"            android:layout_toEndOf="@+id/img_ketua_tu"            android:text="@string/sambutan_kurikulum"            android:textStyle="italic" />        <de.hdodenhof.circleimageview.CircleImageView            android:id="@+id/img_kesiswaan"            android:layout_width="100dp"            android:layout_height="100dp"            android:layout_below="@+id/txt_kurikulum"            android:layout_marginLeft="@dimen/activity_horizontal_margin"            android:layout_marginTop="61dp"            android:layout_marginRight="@dimen/activity_horizontal_margin"            android:src="@drawable/ades" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/img_kesiswaan"            android:layout_marginStart="@dimen/text_margin"            android:layout_marginTop="@dimen/activity_horizontal_margin"            android:layout_marginEnd="10dp"            android:layout_marginBottom="@dimen/text_margin"            android:text="@string/kesiswaan"            android:textStyle="bold" />        <TextView            android:id="@+id/txt_kesiswaan"            android:layout_width="282dp"            android:layout_height="107dp"            android:layout_below="@+id/txt_kurikulum"            android:layout_alignParentEnd="true"            android:layout_marginStart="12dp"            android:layout_marginTop="58dp"            android:layout_marginEnd="16dp"            android:layout_toEndOf="@+id/img_ketua_tu"            android:text="@string/sambutan_kesiswaan"            android:textStyle="italic" />        <de.hdodenhof.circleimageview.CircleImageView            android:id="@+id/img_humas"            android:layout_width="100dp"            android:layout_height="100dp"            android:layout_below="@+id/txt_kesiswaan"            android:layout_marginLeft="@dimen/activity_horizontal_margin"            android:layout_marginTop="61dp"            android:layout_marginRight="@dimen/activity_horizontal_margin"            android:src="@drawable/bayu" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/img_humas"            android:layout_marginStart="@dimen/text_margin"            android:layout_marginTop="@dimen/activity_horizontal_margin"            android:layout_marginEnd="10dp"            android:layout_marginBottom="@dimen/text_margin"            android:text="@string/humas"            android:textStyle="bold" />        <TextView            android:id="@+id/txt_humas"            android:layout_width="282dp"            android:layout_height="107dp"            android:layout_below="@+id/txt_kesiswaan"            android:layout_alignParentEnd="true"            android:layout_marginStart="12dp"            android:layout_marginTop="56dp"            android:layout_marginEnd="16dp"            android:layout_toEndOf="@+id/img_ketua_tu"            android:text="@string/sambutan_humas"            android:textStyle="italic" />        <de.hdodenhof.circleimageview.CircleImageView            android:id="@+id/img_sarana"            android:layout_width="100dp"            android:layout_height="100dp"            android:layout_below="@+id/txt_humas"            android:layout_marginLeft="@dimen/activity_horizontal_margin"            android:layout_marginTop="61dp"            android:layout_marginRight="@dimen/activity_horizontal_margin"            android:src="@drawable/mega" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/img_sarana"            android:layout_marginStart="@dimen/text_margin"            android:layout_marginTop="@dimen/activity_horizontal_margin"            android:layout_marginEnd="10dp"            android:layout_marginBottom="@dimen/text_margin"            android:text="@string/sarana_prasarana"            android:textStyle="bold" />        <TextView            android:id="@+id/txt_sarana"            android:layout_width="282dp"            android:layout_height="107dp"            android:layout_below="@+id/txt_humas"            android:layout_alignParentEnd="true"            android:layout_marginStart="12dp"            android:layout_marginTop="56dp"            android:layout_marginEnd="16dp"            android:layout_toEndOf="@+id/img_ketua_tu"            android:text="@string/sambutan_sarana_prasarana"            android:textStyle="italic" />    </RelativeLayout></android.support.v4.widget.NestedScrollView>